Fixed the issue with the position of the dark mode button, the issue with the colour of the dark mode button, the colour of the background and text of the footer, the position of the footer and inplemented the dark mode in the footer

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,8 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
-  min-width: 320px;
+  width: 100%;
   min-height: 100vh;
 }
